<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/xui_config_color_background"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_controller_settings"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/relay_controller_settings_tips"
                    android:textSize="@dimen/text_size_mini"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                style="@style/BarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_server_host"
                    android:textStyle="bold" />

                <com.xuexiang.xui.widget.edittext.ClearEditText
                    android:id="@+id/et_relay_host"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/relay_server_host_hint" />

            </LinearLayout>

            <LinearLayout
                style="@style/BarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_controller_port"
                    android:textStyle="bold" />

                <com.xuexiang.xui.widget.edittext.ClearEditText
                    android:id="@+id/et_controller_port"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:maxLength="5"
                    android:hint="@string/relay_controller_port_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_client_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/relay_client_disconnected"
                        android:textSize="@dimen/text_size_mini"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tv_device_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:text="@string/relay_device_link"
                        android:textColor="@color/gray_text_light"
                        android:textSize="@dimen/text_size_mini"
                        tools:ignore="SmallSp" />

                </LinearLayout>

                <com.xuexiang.xui.widget.button.ButtonView
                    android:id="@+id/btn_connect"
                    style="@style/ButtonView.Blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:minWidth="90dp"
                    android:padding="5dp"
                    android:text="@string/relay_btn_connect" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_online_devices"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/relay_select_device_tips"
                    android:textSize="@dimen/text_size_mini"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <ListView
                android:id="@+id/lv_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/setting_bar_color"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/features_list"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/click_test_button_first"
                    android:textSize="@dimen/text_size_mini"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/setting_bar_color"
                android:overScrollMode="never"
                tools:listitem="@android:layout/simple_list_item_2" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
